version/0.3/_sources/api/ansys/geometry/core/designer/design/index.rst.txt





The ``design.py`` module
========================

.. py:module:: ansys.geometry.core.designer.design


Summary
-------












.. py:currentmodule:: design
.. tab-set::




    .. tab-item:: Classes

        .. list-table::
          :header-rows: 0
          :widths: auto


          * - :py:attr:`~Design`
            - Provides for organizing geometry assemblies.



    .. tab-item:: Enums

        .. list-table::
          :header-rows: 0
          :widths: auto


          * - :py:attr:`~DesignFileFormat`
            - Provides supported file formats that can be downloaded for designs.











.. toctree::
   :titlesonly:
   :maxdepth: 1
   :hidden:

    🝆 Design<Design>


.. toctree::
   :titlesonly:
   :maxdepth: 1
   :hidden:

    ≔ DesignFileFormat<DesignFileFormat>








Description
-----------

Provides for managing designs.

..
    !! processed by numpydoc !!







