version/0.18/_sources/api/ansys/geometry/core/designer/design/index.rst.txt






The ``design.py`` module
========================

.. py:module:: ansys.geometry.core.designer.design


Summary
-------














.. py:currentmodule:: ansys.geometry.core.designer.design
.. tab-set::




    .. tab-item:: Classes

        .. list-table::
          :header-rows: 0
          :widths: auto


          * - :py:obj:`~ansys.geometry.core.designer.design.Design`
            - Provides for organizing geometry assemblies.



    .. tab-item:: Enums

        .. list-table::
          :header-rows: 0
          :widths: auto


          * - :py:obj:`~ansys.geometry.core.designer.design.LengthScale`
            - Provides supported length scales for designs.


          * - :py:obj:`~ansys.geometry.core.designer.design.DesignFileFormat`
            - Provides supported file formats that can be downloaded for designs.






    .. tab-item:: Constants

        .. list-table::
          :header-rows: 0
          :widths: auto


          * - :py:obj:`~DESIGN_FILE_FORMAT_EXTENSIONS`
            - 







.. toctree::
   :titlesonly:
   :maxdepth: 1
   :hidden:

    <span class="nf nf-cod-symbol_class"></span> Design</api/ansys/geometry/core/designer/design/Design>


.. toctree::
   :titlesonly:
   :maxdepth: 1
   :hidden:

    <span class="nf nf-cod-symbol_enum"></span> LengthScale</api/ansys/geometry/core/designer/design/LengthScale>
    <span class="nf nf-cod-symbol_enum"></span> DesignFileFormat</api/ansys/geometry/core/designer/design/DesignFileFormat>








Description
-----------

Provides for managing designs.

..
    !! processed by numpydoc !!






Module detail
-------------

.. py:data:: DESIGN_FILE_FORMAT_EXTENSIONS



